[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[project]
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry]
name = "public-scripts"
version = "0.1.0"
description = ""
authors = [
  "Dobatymo <Dobatymo@users.noreply.github.com>",
]
readme = "README.md"
packages = [
]

[tool.poetry.dependencies]
python = "^3.8"
bencode-py = ">=2.0.0"
ctypes-windows-sdk = ">=0.0.15"
genutility = { version = ">=0.0.107", extras = [
  "fileformats",
  "filesystem",
  "fingerprinting",
  "hash",
  "image",
  "metrics",
  "pillow",
  "rich",
  "torrent",
  "videofile",
] }
libtorrent = ">=2.0.5"
metrictrees = ">0"
metrohash-python = ">0"
more-itertools = ">0"
mutagen = ">=1"
pillow = ">=9.1.0"
pyexiv2 = ">=2"
pymongo = ">=4"
pypyodbc = ">=1"
pywin32 = ">0"
requests = ">=2"
rich = ">=12.3.0"
scikit-image = ">=0.16"
send2trash = ">=1"
tqdm = ">=4"
typing-extensions = ">=4.6.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

lint.extend-select = [
  "B",
  "I",
]

lint.ignore = [
  "B011",
  "B904",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.bandit]
skips = [
  "B101",
]
